# smart-km-report-gen

./: .env.example  .gitignore  .prettierrc  Git协作防冲突方案.md  PLATFORM_MERGE_BLUEPRINT.md  PR-DESCRIPTION.md  PR-description.md  PR_DESCRIPTION.md  README.md  SYSTEM_MANAGEMENT_BACKEND_TODO.md  develop-commit.txt  docker-compose.yml  feat-b-commit.txt  feat-c-commit.txt  fix_kmai.py  http-client.env.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pom.xml  start-backend.ps1  test-api.http  tsconfig.base.json  turbo.json  当前进度汇报.md  项目目录结构规范-报告生成组.md  项目目录结构规范-知识管理组.md
qa-agent/: .env.example  AGENT_WORKFLOW.md  API.md  DAILY_SUMMARY.md  INTERFACE.md  USER_MANUAL.md  main.py  pyproject.toml  requirements.txt
qa-agent/alembic/: env.py
qa-agent/alembic/versions/: 001_init_qa_session_message.py
qa-agent/api/: chat.py  conversation.py  schemas.py
qa-agent/app/: __init__.py  main.py
qa-agent/app/api/: chat.py  conversation.py  schemas.py
qa-agent/app/client/: java_client.py  knowledge_client.py
qa-agent/app/core/: config.py  constants.py  deps.py  logging.py  user_context.py  user_context_middleware.py
qa-agent/app/db/: __init__.py  constants.py  (+3 more)
qa-agent/client/: java_client.py
qa-agent/core/: config.py  constants.py
qa-agent/db/: __init__.py  constants.py  models.py  repository.py  session.py
qa-agent/graph/: context.py  nodes.py  state.py  test_intent_routing.py  workflow.py
qa-agent/model/: embedding.py  reranker.py
qa-agent/service/: citation_service.py  thinking_service.py
qa-agent/tests/: test_chat.py  test_metrics.py  test_repository.py
(+813 files in other folders)
