[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qa-agent"
version = "0.1.0"
description = "智能问答 Agent 服务"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.0.0",
    "sqlalchemy>=2.0.0",
    "aiomysql>=0.2.0",
    "alembic>=1.13.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "langgraph>=1.0.0",
    "langchain-core>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
]

[tool.setuptools]
packages = [
    "qa_agent",
    "qa_agent.api",
    "qa_agent.client",
    "qa_agent.core",
    "qa_agent.db",
    "qa_agent.graph",
    "qa_agent.model",
    "qa_agent.service",
    "qa_agent.tests",
]

[tool.setuptools.package-dir]
qa_agent = "."
